objects/Daily_Attendence__c.object
<CustomObject>
    <label>Daily Attendence</label>
    <nameField>
        <displayFormat>Attendence-{0000}</displayFormat>
        <label>Employee Attendence ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Attendences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Log_In__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Log In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_Out__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Log Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>K_Employee__c</referenceTo>
        <relationshipLabel>Daily Attendences</relationshipLabel>
        <relationshipName>Daily_Attendences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>K_Employee__c</referenceTo>
        <relationshipLabel>Daily Attendences (Employee)</relationshipLabel>
        <relationshipName>Daily_Attendences1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Daily_Hours__c</fullName>
        <formula>FLOOR(MOD( (Log_Out__c - Log_In__c ) * 24, 24 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Minutes__c</fullName>
        <formula>ROUND(MOD( (Log_Out__c - Log_In__c)*24*60,60), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Attendence_Name__c</fullName>
        <label>Monthly Attendence Name</label>
        <referenceTo>Monthly_Attendence__c</referenceTo>
        <relationshipLabel>Daily Attendences</relationshipLabel>
        <relationshipName>Daily_Attendences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>